# bifrost-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
bifrost_mcp/: __init__.py  __main__.py  credentials.py  mcp_server.py  session.py  session_registry.py  ssh_handler.py  winrm_handler.py
scripts/: setup-hermes-mcp.sh
tests/: test_credentials.py  test_doctor.py  test_mcp_server.py  test_session_registry.py  test_ssh_handler.py  test_winrm_handler.py
