[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost-mcp"
version = "0.1.0"
description = "Bifrost MCP server for interactive remote SSH sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]",
  "paramiko",
]

[project.scripts]
bifrost-mcp = "bifrost_mcp.mcp_server:main"

[tool.setuptools]
packages = ["bifrost_mcp"]
